--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "all": "run-p mock serve",
+    "mock": "json-server --watch src/mock/db.json --port 3000",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -10,6 +12,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
+    "npm-run-all": "^4.1.5",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
