:sparkles: json-serverをオンメモリで起動

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "all": "run-p mock serve",
-    "mock": "json-server --watch src/mock/db.json --port 3000",
+    "mock": "json-server --watch src/mock/db.js --port 3000",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
